<resources>
    <string name="app_name">In Class 06</string>
    <string name="keyword_hint">Show Category</string>
    <string name="go">Go</string>
    <string name="choose">Choose a Keyword</string>
    <string name="Loading">Loading Dictionary</string>
    <string name="Loading_photo">Loading Photo</string>
    <string name="textViewTitle">Title</string>
    <string name="textViewPublishedAt">PublishedAt</string>
    <string name="textViewContent">Content</string>
    <string name="textViewPageCount">Page Count</string>
</resources>
