<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context="com.example.InClass_06.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1">

            <TextView
                android:id="@+id/tvKeyword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/keyword_hint" />

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <Button
                android:id="@+id/btnGo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/go" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textViewTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/textViewTitle"
                android:textAlignment="center"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textViewPublishedAt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/textViewPublishedAt"
                android:textAlignment="center" />

        </LinearLayout>

        <ImageView
            android:id="@+id/ivPictures"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_marginTop="25dp"
            android:visibility="visible" />
        <ProgressBar
            android:id="@+id/progressImages"
            style="?android:attr/progressBarStyle"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:visibility="invisible" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textViewDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/textViewContent"
                android:textAlignment="center" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/ivPrev"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/prev" />


            <TextView
                android:id="@+id/textViewPageCount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/textViewPageCount"
                android:textAlignment="center"
                android:textStyle="bold" />


            <ImageView
                android:id="@+id/ivNext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/next" />


        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
